--- a/project_dnn/library_requirements.Rmd
+++ b/project_dnn/library_requirements.Rmd
@@ -41,6 +41,8 @@ library(umap)
 library(tibble)
 library(dplyr)
 library(tidyr)
+library(igraph)
+library(BiocNeighbors)
 library(ggplot2)
 library(cowplot)
 library(reshape2)
